--- a/app/src/main/res/layouts/login/layout/activity_forget_password.xml
+++ b/app/src/main/res/layouts/login/layout/activity_forget_password.xml
@@ -50,6 +50,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="新密码"
+            android:inputType="textPassword"
             android:textColor="#333"
             android:textSize="15sp"
             />
@@ -65,6 +66,7 @@
             android:id="@+id/login_forget_edittext_repassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:inputType="textPassword"
             android:hint="新密码"
             android:textColor="#333"
             android:textSize="15sp"
