--- a/app/src/main/res/layouts/main/layout/activity_main_main.xml
+++ b/app/src/main/res/layouts/main/layout/activity_main_main.xml
@@ -26,17 +26,17 @@
             android:drawableTop="@drawable/main_tab_sign_selector"
             android:text="首页" />
 
-        <RadioButton
-            android:id="@+id/record_tab"
-            style="@style/Custom.TabRadioButton"
-            android:drawableTop="@drawable/main_tab_record_selector"
-            android:text="发现" />
+<!--        <RadioButton-->
+<!--            android:id="@+id/record_tab"-->
+<!--            style="@style/Custom.TabRadioButton"-->
+<!--            android:drawableTop="@drawable/main_tab_record_selector"-->
+<!--            android:text="发现" />-->
 
-        <RadioButton
-            android:id="@+id/contact_tab"
-            style="@style/Custom.TabRadioButton"
-            android:drawableTop="@drawable/main_tab_contact_selector"
-            android:text="圈子" />
+<!--        <RadioButton-->
+<!--            android:id="@+id/contact_tab"-->
+<!--            style="@style/Custom.TabRadioButton"-->
+<!--            android:drawableTop="@drawable/main_tab_contact_selector"-->
+<!--            android:text="圈子" />-->
 
         <RadioButton
             android:id="@+id/settings_tab"
